# sluice

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  install.sh  justfile  rust-toolchain.toml  uninstall.sh
.githooks/: pre-push
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/sluice-proto/: Cargo.toml  build.rs
crates/sluice-proto/proto/: sluice.proto
crates/sluice-proto/src/: lib.rs
crates/sluice-types/: Cargo.toml
crates/sluice-types/src/: conn.rs  decision.rs  feed.rs  lib.rs  verdict.rs
crates/sluice-ui/: Cargo.toml  sluice-release.pub  tauri.conf.json
crates/sluice-ui/capabilities/: default.json
crates/sluice-ui/deb/: postinst.sh  postrm.sh  preinst.sh  prerm.sh  sluice.desktop
crates/sluice-ui/frontend/: index.html  main.js  style.css
crates/sluice-ui/geoip/: NOTICE
crates/sluice-ui/src/: geoip.rs  history.rs  main.rs  netstat.rs
crates/sluice-ui/src/testdata/: test.data  test.minisig  test.pub
docs/: INSTALL.md
engine/: README.md  bench-connect.py  e1-probe.py  install.sh  measure-e0.sh  run-e0.sh  sluice-engine.service  test-e1.sh  test-e3.1.sh  test-e3.sh  test-e4.sh  test-e6.sh  uninstall.sh
engine/common/: Cargo.toml
engine/common/src/: lib.rs
engine/ebpf/: Cargo.toml  rust-toolchain.toml
engine/ebpf/.cargo/: config.toml
engine/ebpf/src/: main.rs
engine/loader/: Cargo.toml
engine/loader/src/: container.rs  dns.rs  inbound.rs  main.rs  nflog.rs  nft.rs
extension/: README.md  extension.js  install.sh  metadata.json  prefs.js  stylesheet.css
extension/schemas/: org.gnome.shell.extensions.sluice-bandwidth.gschema.xml
scripts/: fetch-geoip.sh  gen-icon.py  package-release.sh  release-prep.sh  setup.sh  sign-release.sh
