[package]
name = "sluice-ui"
version = "0.0.0"
description = "Sluice — the Tauri desktop app (the unprivileged gRPC client of the Sluice engine, with the live feed + two-click allow/block)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sluice-ui"
path = "src/main.rs"

[dependencies]
sluice-types = { path = "../sluice-types" }
# Sluice engine link (E3.0): the UI is a gRPC *client* of our own engine over UDS.
sluice-proto = { path = "../sluice-proto" }
tonic.workspace = true
# UDS client transport: a custom connector wrapping a tokio UnixStream (matches the versions
# tonic 0.12 already pulls in; same pattern as crates/engine's UDS test).
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
# Verify-only minisign (Ed25519) signature check for the in-app updater (#26). Pure Rust — no
# external `minisign` binary is needed at runtime to verify a release.
minisign-verify = "0.2"

[build-dependencies]
tauri-build.workspace = true
